--- a/app/views/redmine_issue_repeat/_intervall_time_field.html.erb
+++ b/app/views/redmine_issue_repeat/_intervall_time_field.html.erb
@@ -76,25 +76,28 @@
     container.style.marginTop = '5px';
     container.style.marginBottom = '5px';
     container.style.display = 'block';
+    container.style.textAlign = 'left';
     
     // Erstelle Checkboxen
     weekdays.forEach(function(weekday) {
       var checkboxWrapper = document.createElement('label');
       checkboxWrapper.style.display = 'block';
-      checkboxWrapper.style.marginBottom = '6px';
+      checkboxWrapper.style.marginBottom = '3px';
       checkboxWrapper.style.cursor = 'pointer';
-      checkboxWrapper.style.lineHeight = '1.6';
+      checkboxWrapper.style.lineHeight = '1.4';
       checkboxWrapper.style.clear = 'both';
+      checkboxWrapper.style.textAlign = 'left';
       
       var checkbox = document.createElement('input');
       checkbox.type = 'checkbox';
       checkbox.value = weekday.value;
       checkbox.name = 'custom_field_values[<%= weekday_cf_id %>][]';
       checkbox.id = 'weekday_<%= weekday_cf_id %>_' + weekday.value.toLowerCase();
-      checkbox.style.marginRight = '8px';
+      checkbox.style.marginRight = '6px';
       checkbox.style.verticalAlign = 'middle';
       checkbox.style.float = 'none';
       checkbox.style.display = 'inline-block';
+      checkbox.style.marginLeft = '0';
       
       // Prüfe ob dieser Wochentag bereits ausgewählt ist
       var options = selectElement.querySelectorAll('option');
