--- a/app/views/redmine_issue_repeat/_intervall_time_field.html.erb
+++ b/app/views/redmine_issue_repeat/_intervall_time_field.html.erb
@@ -77,6 +77,7 @@
     container.style.marginBottom = '5px';
     container.style.display = 'block';
     container.style.textAlign = 'left';
+    container.style.paddingLeft = '20px';
     
     // Erstelle Checkboxen
     weekdays.forEach(function(weekday) {
